<resources>
    <string name="app_name">DepositCalc</string>
    <string name="typeOfCapitalization">Capitalization type</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="calculation">Calculate</string>
    <string name="replenishmentInAMonth">Monthly replenishment:</string>
    <string name="result">Result:</string>
    <string name="calculate">CALCULATE</string>
    <string name="sum">Amount:</string>
    <string name="final_capital">Final capital</string>
    <string name="initial_capital">Seed capital</string>
    <string name="interest_rate">Enter interest rate</string>
    <string name="input_data">Data input</string>
    <string name="history_request">Search history</string>

    <string name="item_final_capital">Final capital:</string>
    <string name="item_initial_capital">Seed capital:</string>
    <string name="item_type_of_capitalization">Capitalization type:</string>
    <string name="item_rate">Interest rate:</string>
    <string name="pressed_exit">Click again to exit</string>
    <string name="toast_fill_all_fields">Fill in all the fields</string>
    <string name="toast_choose_type">Choose capitalization type</string>
    <string name="toast_input_sum_month_replenishment">Enter the monthly top-up amount</string>

    <string name="clear_all_data_in_recycler">Clear search history?</string>
    <string name="delete_data_in_recycler">Delete this query?</string>
    <string name="main_text_description">DepositCalc will become your best friend if you want to know how long it will take your capital to grow.</string>
    <string name="second_text_description">All you have to do is specify:</string>
    <string name="second_text_description_item1">1.	Seed capital.</string>
    <string name="second_text_description_item2">2.	Interest rate. (Of your investment instrument)</string>
    <string name="second_text_description_item3">3.	Capitalization type.</string>
    <string name="second_text_description_additionally">*Additionally, you can check the checkbox \"Monthly replenishment\" and specify its amount. After which, by clicking on the \"Calculate\" button, you will find out how long it will take to reach the desired amount. </string>
    <string name="further">Сontinue</string>

    <string name="year">year</string>
    <string name="years">years</string>
    <string name="years2">years</string>

    <string name="month_result">month</string>
    <string name="months_result">months</string>
    <string name="months2_result">months</string>

    <string name="week_result">week</string>
    <string name="weeks_result">weeks</string>
    <string name="weeks2_result">weeks</string>

    <string name="back">back</string>
    <string name="clear">clear</string>
    <string name="delete">delete</string>

</resources>