<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/coins"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/text_input_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:text="@string/input_data"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Ввод данных"/>


        <LinearLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_data">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="30dp"
                android:hint="@string/interest_rate"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/interestRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="30dp"
                android:hint="@string/initial_capital"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/initialCapital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="30dp"
                android:hint="@string/final_capital"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/finalCapital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstLayout">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/typeOfCapitalization"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:layout_marginStart="16dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioButtonWeek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:buttonTint="@color/gold"
                        android:layout_marginStart="16dp"
                        android:text="@string/week"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioButtonMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/gold"
                        android:layout_marginStart="50dp"
                        android:text="@string/month"
                        android:textColor="@color/black"/>
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/threeLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/replenishmentInAMonth"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/replenishmentCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:buttonTint="@color/gold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint ="@color/black"
                android:elevation="30dp"
                android:layout_margin="10dp"
                android:hint="@string/sum">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sumMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/threeLinear">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textCalculation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="@color/gold"
                tools:text="123.00 Месяца"/>

            <TextView
                android:id="@+id/btnCalculation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:text="@string/calculate"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:background="@drawable/background_btn"/>

            <TextView
                android:id="@+id/btnHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/gold"
                android:gravity="center"
                android:text="@string/history_request"
                android:textSize="16sp"
                />
        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>