<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin = "8dp"
    android:elevation="10dp"
    android:background="@drawable/bg_item_history">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textSize="23sp"
                android:paddingStart="5dp"
                android:textColor="@color/black"
                android:text="@string/item_rate"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/item_interest_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:paddingStart="5dp"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:text="@string/item_initial_capital"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/item_initial_capital"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:paddingStart="5dp"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:text="@string/item_final_capital"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/item_final_capital"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:paddingStart="5dp"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:text="@string/item_type_of_capitalization"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/item_type_of_capitalization"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:paddingStart="5dp"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:text="@string/replenishmentInAMonth"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/item_replenishment_in_a_month"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:paddingStart="5dp"
                android:textSize="23sp"
                android:textColor="@color/black"
                android:text="@string/result"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/item_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>